--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,12 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@layer components{
+  .button {
+    @apply px-2 py-1 rounded-lg bg-teal-900 text-white font-medium
+                 hover:bg-teal-950 cursor-pointer focus:outline-none focus:ring-2
+                 focus:ring-emerald-400 focus:ring-offset-2 focus:ring-offset-gray-950
+                 transition-colors duration-200
+  }
+}
